<resources>
    <string name="app_name">ArteMIS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Language">Select Language</string>
    <string name="Login_to_your_account">Login to your account</string>
    <string name="welcome_back">Welcome back! Please enter your details.</string>
    <string name="sign_in">Sign In</string>
    <string name="view_guest">View as Guest</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="continue_with">Continue with</string>
    <string name="login_or">or</string>
    <string name="data_input">Data Input</string>
    <string name="locationText">Location</string>
    <string name="amountText">Amount of Waste</string>
    <string name="typeText">Type of Waste</string>
    <string name="nameText">Name of Waste</string>
    <string name="quantityText">Waste Quantity</string>
    <string name="statusTitle">Status</string>
    <string name="statusIndicator">Status Indcator</string>
    <string name="wasteMappingTitle">Waste Mapping</string>
    <string name="this_is_you_dashboard">This is your dashboard</string>
    <string name="HELLO">Hello</string>
    <string name="Mostgatheredwaste">Most Gathered Waste</string>
    <string name="Dashboard">Dashboard</string>
    <string name="Logs">Logs</string>
    <string name="changePassword">Change your Password</string>
    <string name="logoutButton">Logout</string>
    <string name="concerns">Concerns</string>
    <string name="feedback">Feedback</string>
    <string name="typeOfConcern">What do you need help with?</string>
    <string name="locationOfConcern">Choose the location of concern:</string>
    <string name="descriptionOfConcern">Describe your concern:</string>
    <string name="submitButton">Submit</string>
    <string name="building">Building</string>
    <string name="wasteGenerated">Waste Generated</string>
    <string name="wasteComposition">Waste Composition</string>
    <string name="wasteGenPerBuilding">Waste Generation per Building</string>
    <string name="wasteCompPerBuilding">Waste Composition per Building</string>
    <string name="rankingPerBuilding">Ranking per Building</string>
    <string-array name="location">
        <item>Batangas State University - Alangilan Campus</item>
        <item>Batangas State University - Pablo Borbon Campus</item>
        <item>Batangas State University - Malvar Campus</item>
    </string-array>
</resources>