<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login_to_your_account"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="25sp"
        android:layout_marginBottom="-10dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:alpha=".7"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="305dp"
        android:layout_height="80dp"
        android:ems="11"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:foregroundTint="@color/transparent"
        android:textColorHint="?attr/colorSecondaryVariant"
        android:textColor="?attr/colorOnSecondary"
        android:background="@drawable/edit_text_background"
        android:layout_marginBottom="15dp"
        android:paddingStart="15dp"
        android:elegantTextHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,HardcodedText" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="305dp"
        android:layout_height="80dp"
        android:background="@drawable/edit_text_background"
        android:elegantTextHeight="true"
        android:ems="11"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:textColor="?attr/colorOnSecondary"
        android:textColorHint="?attr/colorSecondaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.470"
        tools:ignore="Autofill,HardcodedText" />

    <ImageView
            android:id="@+id/visibility"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/baseline_remove_red_eye_24"
            app:layout_constraintBottom_toBottomOf="@+id/editTextPassword"
            app:layout_constraintTop_toTopOf="@+id/editTextPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
    />
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:elegantTextHeight="true"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,UsingOnClickInXml" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_or"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.456"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/viewBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_guest"
        android:elegantTextHeight="true"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="HardcodedText,UsingOnClickInXml" />

    <Button
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/forgot_password"
        android:textColor="?attr/colorOnSecondary"
        android:alpha=".8"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:paddingTop="0dp"
        android:layout_marginTop="-5dp"
        android:background="@drawable/text_button_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewBtn"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_with"
        android:layout_marginBottom="60dp"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <ImageButton
        android:id="@+id/googleButton"
        android:layout_width="95dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="60dp"
        android:src="@mipmap/google"
        android:scaleType="centerInside"
        android:background="@drawable/text_button_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <include
        layout="@layout/language_selection_dialog"
        android:id="@+id/language_selection_dialog"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>