<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ConcernActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_bar"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="12dp"
            >

        <ImageView
            android:background="@drawable/settings_button_selector"
            android:id="@+id/backConcern"
            android:layout_width="40dp"
            android:layout_height="40dp"
                android:padding="6dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:id="@+id/settingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Help Desk"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:elegantTextHeight="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/locationPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/locationOfConcern"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"
                    />

            <Spinner
                    android:id="@+id/locationPickerInput"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="?attr/colorOnPrimary"
                    android:background="@drawable/spinner2"
                    android:layout_marginTop="5dp"
                    />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/concernLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/typeOfConcern"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"
                    />

            <Spinner
                    android:id="@+id/concernTypeInput"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="?attr/colorOnPrimary"
                    android:background="@drawable/spinner2"
                    android:layout_marginTop="5dp"
                    />

        </LinearLayout>


        <LinearLayout
                android:id="@+id/buildingPicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/wasteCategory"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
        >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Building"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"
            />

            <Spinner
                    android:id="@+id/buildingPickerInput"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="?attr/colorOnPrimary"
                    android:background="@drawable/spinner2"
            />

        </LinearLayout>



        <LinearLayout
                android:id="@+id/descriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/addTitle"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptionOfConcern"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"
                    />

            <EditText
                    android:id="@+id/descriptionConcernEditText"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/add_input_background"
                    android:padding="5dp"
                    android:textSize="12sp"
                    android:gravity="top"
                    />

        </LinearLayout>

        <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submitButton"
                android:elegantTextHeight="true"
                android:textAllCaps="false"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                app:cornerRadius="5dp"
                tools:ignore="HardcodedText,UsingOnClickInXml" />

    </LinearLayout>


    <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:elevation="3dp"
            android:visibility="gone"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>